--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# ===================================================================
-# A comprehensive .gitignore for a Python-based ML/Data Science project
-# ===================================================================
-
 # 1. Environments & Caches
 # Ignore virtual environments, caches, and user-specific tool configs.
 # These are local to your machine and should not be in version control.
@@ -39,7 +35,7 @@ Thumbs.db
 # 3. Datasets & Large Files
 # Ignore all raw and processed data directories and compressed files.
 # Add a README in your data folder explaining how to get the data.
-data/*
+data/mvtec/
 
 # 4. ML Models & Checkpoints
 # Ignore trained model files. They are large binary files.
@@ -56,7 +52,6 @@ nohup.out
 *.log
 handout/
 workspace/
-results/*
 anomaly_maps/
 
 # 6. Jupyter Notebook Checkpoints
